# rsl-engine

./: .env  .watchfilesrc  Dockerfile  alembic.ini  collect_cbc_data.py  docker-compose.yml  dump.rdb  hba1c.py  kenyan_medical_claims_20260326_145042.xlsx  pyproject.toml  test_all_endpoints.py
alembic/: env.py
app/: main.py
app/agent/: chat_agent.py  (+7 more)
docs/: agent-workflow.md  ocr-module.md
models/: cbc_model1_claim_autoencoder.keras  cbc_model1_claim_autoencoder_meta.json  cbc_model1_scaler.pkl  cbc_model1_training_log.csv  cbc_model2_category_encoder.pkl  cbc_model2_diagnosis_encoder.pkl  cbc_model2_hierarchical_classifier.keras  cbc_model2_hierarchical_classifier_meta.json  cbc_model2_scaler.pkl  cbc_model2_training_log.csv  cbc_model3_patient_scaler.pkl  cbc_model3_patient_temporal_ae.keras  cbc_model3_patient_temporal_meta.json  cbc_model3_training_log.csv  diabetes_model3_patient_scaler.pkl  diabetes_model3_patient_temporal_ae.keras  diabetes_model3_patient_temporal_meta.json  diabetes_model3_training_log.csv  hba1c_disease_clasifier.ipynb  hba1c_model2_category_encoder.pkl  hba1c_model2_classifier.keras  hba1c_model2_classifier_meta.json  hba1c_model2_diagnosis_encoder.pkl  hba1c_model2_scaler.pkl  hba1c_temporal_models.ipynb  model4_facility_scaler.pkl  model4_facility_temporal_ae.keras  model4_facility_temporal_meta.json  model4_training_log.csv  pre-claim-hba1c-autoencoder.ipynb
uploads/: 2db81b83-a22b-4412-9f5f-be860876b261.csv  2e8eecca-ba80-4a2e-b180-397752586ea8.csv  636ab563-0dcb-40a0-bc8d-b67249100cf7.csv  cb2fa6fe-5105-4477-815b-7052edd279e4.csv
(+56 files in other folders)
